--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>  
       <div class="prepservnd"> 
         <h1 class="preptime">• 45mins</h1>
-        <h1 class="servsug">4-7 presons</h1>
+        <h1 class="servsug">4-7 persons</h1>
       </div>
       </div>
       <div class="bottomBlock"></div>
